feat: refresh_token comentado e jwt comentado.
